Completed Part 2.2 Preparation

--- a/Homework_03.ipynb
+++ b/Homework_03.ipynb
@@ -84,7 +84,7 @@
           "height": 1000
         },
         "id": "qvITLRocejuG",
-        "outputId": "e3195ab9-24a7-413b-b114-9aba1a0e9ee0"
+        "outputId": "8ee9e34e-8ea5-420f-e47b-caa2544681d5"
       },
       "source": [
         "# Import useful libraries\n",
@@ -102,7 +102,7 @@
         "print(img_matrix)\n",
         "\n"
       ],
-      "execution_count": 139,
+      "execution_count": 481,
       "outputs": [
         {
           "output_type": "display_data",
@@ -234,7 +234,7 @@
           "height": 837
         },
         "id": "cnc8BNW9ejuJ",
-        "outputId": "c86c99ca-c94f-4ea4-86fb-49afc3821e45"
+        "outputId": "f665ab56-8d6a-4fcc-b96b-68bd2b12e4bb"
       },
       "source": [
         "######## Convolution with Laplacian Filter ##################\n",
@@ -252,7 +252,7 @@
         "print(output.shape)\n",
         "plt.imshow(output)"
       ],
-      "execution_count": 140,
+      "execution_count": 482,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,13 +295,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fc3fb8a5a90>"
+              "<matplotlib.image.AxesImage at 0x7fc3f8907e90>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 140
+          "execution_count": 482
         },
         {
           "output_type": "display_data",
@@ -356,7 +356,7 @@
           "height": 658
         },
         "id": "pyFLwZxYejuJ",
-        "outputId": "a06aceb1-dd12-4ed5-a6a1-a4c70e81f0ee"
+        "outputId": "fa1e2994-20c6-4a6f-f74e-097ba31f5f96"
       },
       "source": [
         "######## Convolution with Laplacian Filter and the setting of stride=2 ##################\n",
@@ -381,7 +381,7 @@
         "print(output.shape)\n",
         "plt.imshow(output)"
       ],
-      "execution_count": 141,
+      "execution_count": 483,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,13 +414,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fc3fb815450>"
+              "<matplotlib.image.AxesImage at 0x7fc3f887e150>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 141
+          "execution_count": 483
         },
         {
           "output_type": "display_data",
@@ -477,7 +477,7 @@
           "height": 658
         },
         "id": "JOV72Sp9ejuL",
-        "outputId": "cbdff758-3f5e-4d50-fab4-0057343c1bb4"
+        "outputId": "6841b524-0d2e-48c2-db60-eba0a8e2b46d"
       },
       "source": [
         "######## MaxPooling with the setting of 2X2 ##################\n",
@@ -501,7 +501,7 @@
         "print(output.shape)\n",
         "plt.imshow(output)"
       ],
-      "execution_count": 142,
+      "execution_count": 484,
       "outputs": [
         {
           "output_type": "stream",
@@ -534,13 +534,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fc3fc2f4990>"
+              "<matplotlib.image.AxesImage at 0x7fc3f87e8390>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 142
+          "execution_count": 484
         },
         {
           "output_type": "display_data",
@@ -588,7 +588,7 @@
         "from tensorflow.keras import layers\n",
         "\n"
       ],
-      "execution_count": 143,
+      "execution_count": 485,
       "outputs": []
     },
     {
@@ -622,11 +622,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "DjyfYiGrejuN",
-        "outputId": "39536fc1-c14c-4370-9f58-23f348fcaa8e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 491
-        }
+          "height": 354
+        },
+        "outputId": "55030d72-5252-4725-f1cd-069e3a9025a4"
       },
       "source": [
         "# # the data, split between train and test sets with keras.datasets\n",
@@ -642,10 +642,11 @@
         "\n",
         "# Print out first image and its correponding label index\n",
         "plt.imshow(x_train[0])\n",
+        "print(\"Label:\", y_train[0])\n",
         "\n",
         "# # Dimension expansion to ensure that images have shape (28, 28, 1)\n",
-        "# x_train = ...\n",
-        "# x_test = ...\n",
+        "x_train = np.expand_dims(x_train, axis=3)\n",
+        "x_test = np.expand_dims(x_test, axis=3)\n",
         "\n",
         "# # Conduct padding on training/test images to (32, 32, 1) for LeNet-5\n",
         "x_train = np.pad(x_train, ((0,0),(2,2),(2,2),(0,0)), 'constant')\n",
@@ -653,6 +654,7 @@
         "\n",
         "# # Print out the training/test data shapes and the numbers of training/test samples\n",
         "print(\"x_train shape:\", x_train.shape)\n",
+        "print(\"x_test.shape:\", x_test.shape)\n",
         "print(x_train.shape[0], \"train samples\")\n",
         "print(x_test.shape[0], \"test samples\")\n",
         "\n",
@@ -660,18 +662,18 @@
         "y_train = keras.utils.to_categorical(y_train, num_classes)\n",
         "y_test = keras.utils.to_categorical(y_test, num_classes)"
       ],
-      "execution_count": 144,
+      "execution_count": 486,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-144-bf0aaa1c8869>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m# Print out first image and its correponding label index\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatasets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfashion_mnist\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m# # Dimension expansion to ensure that images have shape (28, 28, 1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: module 'tensorflow.keras.datasets.fashion_mnist' has no attribute 'index'"
-          ]
+          "output_type": "stream",
+          "text": [
+            "Label: 9\n",
+            "x_train shape: (60000, 32, 32, 1)\n",
+            "x_test.shape: (10000, 32, 32, 1)\n",
+            "60000 train samples\n",
+            "10000 test samples\n"
+          ],
+          "name": "stdout"
         },
         {
           "output_type": "display_data",
@@ -752,7 +754,7 @@
         "\n",
         "# model.summary()"
       ],
-      "execution_count": null,
+      "execution_count": 487,
       "outputs": []
     },
     {
@@ -794,7 +796,7 @@
         "# history = model.fit(..., ..., batch_size=batch_size, epochs=epochs, validation_split=0.1)\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 488,
       "outputs": []
     },
     {
@@ -809,7 +811,7 @@
         "# print(\"Test loss:\", score[0])\n",
         "# print(\"Test accuracy:\", score[1])\n"
       ],
-      "execution_count": null,
+      "execution_count": 489,
       "outputs": []
     },
     {
@@ -921,7 +923,7 @@
         "# plt.legend(['train', 'validation'], loc='upper right')\n",
         "# plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 490,
       "outputs": []
     },
     {
@@ -974,7 +976,7 @@
         "# plt.legend(['train', 'validation'], loc='upper right')\n",
         "# plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 491,
       "outputs": []
     },
     {
@@ -1027,7 +1029,7 @@
         "# plt.legend(['train', 'validation'], loc='upper right')\n",
         "# plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 492,
       "outputs": []
     }
   ]
