--- a/Homework_03.ipynb
+++ b/Homework_03.ipynb
@@ -84,7 +84,7 @@
           "height": 1000
         },
         "id": "qvITLRocejuG",
-        "outputId": "8ee9e34e-8ea5-420f-e47b-caa2544681d5"
+        "outputId": "fe952766-3e63-43f7-b6ea-6ad7db24a6a5"
       },
       "source": [
         "# Import useful libraries\n",
@@ -102,7 +102,7 @@
         "print(img_matrix)\n",
         "\n"
       ],
-      "execution_count": 481,
+      "execution_count": 540,
       "outputs": [
         {
           "output_type": "display_data",
@@ -234,7 +234,7 @@
           "height": 837
         },
         "id": "cnc8BNW9ejuJ",
-        "outputId": "f665ab56-8d6a-4fcc-b96b-68bd2b12e4bb"
+        "outputId": "6a9168c3-b7fb-4b1c-92d5-0092ff019660"
       },
       "source": [
         "######## Convolution with Laplacian Filter ##################\n",
@@ -252,7 +252,7 @@
         "print(output.shape)\n",
         "plt.imshow(output)"
       ],
-      "execution_count": 482,
+      "execution_count": 541,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,13 +295,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fc3f8907e90>"
+              "<matplotlib.image.AxesImage at 0x7fc3f004be90>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 482
+          "execution_count": 541
         },
         {
           "output_type": "display_data",
@@ -356,7 +356,7 @@
           "height": 658
         },
         "id": "pyFLwZxYejuJ",
-        "outputId": "fa1e2994-20c6-4a6f-f74e-097ba31f5f96"
+        "outputId": "0ea69939-b803-4d9f-9bbe-cafbce2b6077"
       },
       "source": [
         "######## Convolution with Laplacian Filter and the setting of stride=2 ##################\n",
@@ -381,7 +381,7 @@
         "print(output.shape)\n",
         "plt.imshow(output)"
       ],
-      "execution_count": 483,
+      "execution_count": 542,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,13 +414,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fc3f887e150>"
+              "<matplotlib.image.AxesImage at 0x7fc3f98caf50>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 483
+          "execution_count": 542
         },
         {
           "output_type": "display_data",
@@ -477,7 +477,7 @@
           "height": 658
         },
         "id": "JOV72Sp9ejuL",
-        "outputId": "6841b524-0d2e-48c2-db60-eba0a8e2b46d"
+        "outputId": "687fed3f-c85a-4752-b3dd-eda4aeaa9278"
       },
       "source": [
         "######## MaxPooling with the setting of 2X2 ##################\n",
@@ -501,7 +501,7 @@
         "print(output.shape)\n",
         "plt.imshow(output)"
       ],
-      "execution_count": 484,
+      "execution_count": 543,
       "outputs": [
         {
           "output_type": "stream",
@@ -534,13 +534,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fc3f87e8390>"
+              "<matplotlib.image.AxesImage at 0x7fc3f7c57cd0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 484
+          "execution_count": 543
         },
         {
           "output_type": "display_data",
@@ -588,7 +588,7 @@
         "from tensorflow.keras import layers\n",
         "\n"
       ],
-      "execution_count": 485,
+      "execution_count": 544,
       "outputs": []
     },
     {
@@ -626,7 +626,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 354
         },
-        "outputId": "55030d72-5252-4725-f1cd-069e3a9025a4"
+        "outputId": "b8f73cdd-ff3d-4cf6-d6d1-9a6d26b1cbc7"
       },
       "source": [
         "# # the data, split between train and test sets with keras.datasets\n",
@@ -662,7 +662,7 @@
         "y_train = keras.utils.to_categorical(y_train, num_classes)\n",
         "y_test = keras.utils.to_categorical(y_test, num_classes)"
       ],
-      "execution_count": 486,
+      "execution_count": 545,
       "outputs": [
         {
           "output_type": "stream",
@@ -730,7 +730,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "c97heiiSejuN"
+        "id": "c97heiiSejuN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "978e964b-fb93-41c0-8615-ca79aae2bf2a"
       },
       "source": [
         "### Construct LeNet-5\n",
@@ -738,24 +742,55 @@
         "from tensorflow.keras import regularizers\n",
         "keras.backend.clear_session()\n",
         "\n",
-        "# model = keras.Sequential(\n",
-        "#     [\n",
-        "#         keras.Input(shape=input_shape),\n",
-        "#         layers.Conv2D(..., kernel_size=(...), kernel_regularizer=..., activation=...), #C1\n",
-        "#         layers.MaxPooling2D(pool_size=(...)), # S2 Subsampling\n",
-        "#         layers.Conv2D(..., kernel_size=(...), kernel_regularizer=..., activation=...), # C3\n",
-        "#         layers.MaxPooling2D(pool_size=(...)), # S4 Subsampling\n",
-        "#         layers.Flatten(), # Convert 2D convolution layer to 1D fully connected layer\n",
-        "#         layers.Dense(..., kernel_regularizer=..., activation = ...), # C5\n",
-        "#         layers.Dense(..., kernel_regularizer=..., activation = ...), # F6\n",
-        "#         layers.Dense(num_classes, activation=...), # OUTPUT\n",
-        "#     ]\n",
-        "# )\n",
+        "model = keras.Sequential(\n",
+        "  [\n",
+        "    keras.Input(shape=input_shape),\n",
+        "    layers.Conv2D(6, kernel_size=(5, 5), kernel_regularizer=regularizers.l2(4e-5), activation=\"relu\"), #C1\n",
+        "    layers.MaxPooling2D(pool_size=(2, 2)), # S2 Subsampling\n",
+        "    layers.Conv2D(16, kernel_size=(5, 5), kernel_regularizer=regularizers.l2(4e-5), activation=\"relu\"), # C3\n",
+        "    layers.MaxPooling2D(pool_size=(2, 2)), # S4 Subsampling\n",
+        "    layers.Flatten(), # Convert 2D convolution layer to 1D fully connected layer\n",
+        "    layers.Dense(120, kernel_regularizer=regularizers.l2(4e-5), activation = \"relu\"), # C5\n",
+        "    layers.Dense(84, kernel_regularizer=regularizers.l2(4e-5), activation = \"relu\"), # F6\n",
+        "    layers.Dense(num_classes, activation=\"relu\"), # OUTPUT\n",
+        "  ]\n",
+        ")\n",
         "\n",
-        "# model.summary()"
+        "model.summary()"
       ],
-      "execution_count": 487,
-      "outputs": []
+      "execution_count": 546,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "conv2d (Conv2D)              (None, 28, 28, 6)         156       \n",
+            "_________________________________________________________________\n",
+            "max_pooling2d (MaxPooling2D) (None, 14, 14, 6)         0         \n",
+            "_________________________________________________________________\n",
+            "conv2d_1 (Conv2D)            (None, 10, 10, 16)        2416      \n",
+            "_________________________________________________________________\n",
+            "max_pooling2d_1 (MaxPooling2 (None, 5, 5, 16)          0         \n",
+            "_________________________________________________________________\n",
+            "flatten (Flatten)            (None, 400)               0         \n",
+            "_________________________________________________________________\n",
+            "dense (Dense)                (None, 120)               48120     \n",
+            "_________________________________________________________________\n",
+            "dense_1 (Dense)              (None, 84)                10164     \n",
+            "_________________________________________________________________\n",
+            "dense_2 (Dense)              (None, 10)                850       \n",
+            "=================================================================\n",
+            "Total params: 61,706\n",
+            "Trainable params: 61,706\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -796,7 +831,7 @@
         "# history = model.fit(..., ..., batch_size=batch_size, epochs=epochs, validation_split=0.1)\n",
         "\n"
       ],
-      "execution_count": 488,
+      "execution_count": 547,
       "outputs": []
     },
     {
@@ -811,7 +846,7 @@
         "# print(\"Test loss:\", score[0])\n",
         "# print(\"Test accuracy:\", score[1])\n"
       ],
-      "execution_count": 489,
+      "execution_count": 548,
       "outputs": []
     },
     {
@@ -923,7 +958,7 @@
         "# plt.legend(['train', 'validation'], loc='upper right')\n",
         "# plt.show()"
       ],
-      "execution_count": 490,
+      "execution_count": 549,
       "outputs": []
     },
     {
@@ -976,7 +1011,7 @@
         "# plt.legend(['train', 'validation'], loc='upper right')\n",
         "# plt.show()"
       ],
-      "execution_count": 491,
+      "execution_count": 550,
       "outputs": []
     },
     {
@@ -1029,7 +1064,7 @@
         "# plt.legend(['train', 'validation'], loc='upper right')\n",
         "# plt.show()"
       ],
-      "execution_count": 492,
+      "execution_count": 551,
       "outputs": []
     }
   ]
